--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postgres": "^3.4.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "^3.5.1",
     "resend": "^6.5.2",
     "ws": "^8.18.3",
     "zod": "^4.1.12"
