Refactor: Professional code improvements and cleanup
- Add centralized logger utility for structured logging
- Implement standardized API error handling with ApiError class
- Create constants file for configuration and magic strings
- Remove test files (test-email.ts, test-db.ts) from repository
- Remove duplicate route files (route-new.ts)
- Replace all console.log/error with logger calls
- Remove unnecessary console statements from client code
- Update .gitignore to exclude test and temporary files
- Use STATUS_COLORS constant in analytics route
- Improve code organization following industry best practices

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,24 @@ drizzle/*.sql
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
+.idea/
+*.swp
+*.swo
+*~
+
+# Test files
+test-*.ts
+test-*.js
+*.test.local.ts
+
+# Temporary files
+*.tmp
+*.bak
+*.log
+
+# OS
+Thumbs.db
+.DS_Store
 !.vscode/extensions.json
 .idea/
 *.swp
